--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ p {
 footer {
     background-color: #333;
     color: #fff;
-    text-align: center;
+    text-align: justify;
     padding: 10px;
     position: fixed;
     bottom: 0;
