Update styles.css. nav buttons

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 /* Reset default margin and padding */
 html, body {
+    font-family: Verdana;
     margin: 0;
     padding: 0;
 }
@@ -17,10 +18,17 @@ nav button {
     background-color: #fff;
     color: #333;
     border: none;
+    min-width: 60px;
     padding: 8px 16px;
     margin: 0 5px;
     cursor: pointer;
     font-size: 16px;
+}
+
+button:hover {
+    background-color: #666;
+    color: #fff;
+    border: 1px #222;
 }
 
 /* Style the header */
