--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,12 @@ p {
     margin-top: 20px;
 }
 
+.infoblock {
+    font-size: 20px;
+    font-weight: lighter;
+    color: #666;
+}
+
 .bottom-links {
     text-align: center;
     margin-top: 10px;
