--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ nav button {
     background-color: #fff;
     color: #333;
     border: none;
-    min-width: 60px;
+    width: 60px;
+    height: 50px
     padding: 8px 16px;
     margin: 0 5px;
     cursor: pointer;
