--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 
 /* Reset default margin and padding */
 html, body {
-    font-family: Verdana;
     margin: 0;
     padding: 0;
 }
@@ -14,25 +13,14 @@ nav {
     text-align: center;
 }
 
-nav a {
-    display: inline-block;
+nav button {
     background-color: #fff;
     color: #333;
     border: none;
-    width: 120px; /* Adjust as needed */
-    height: 50px; /* Adjust as needed */
-    line-height: 50px; /* Center the text vertically */
     padding: 8px 16px;
     margin: 0 5px;
     cursor: pointer;
     font-size: 16px;
-    text-decoration: none; /* Remove default underline */
-}
-
-nav a:hover {
-    background-color: #666;
-    color: #fff;
-    border: 1px solid #222; /* Correct the border syntax */
 }
 
 /* Style the header */
@@ -47,6 +35,7 @@ h3 {
     margin-top: 10px;
     color: #666;
     font-size: 40px;
+
 }
 
 h5 {
@@ -54,6 +43,7 @@ h5 {
     margin-top: 10px;
     color: #888;
     font-size: 30px;
+
 }
 
 /* Style the paragraph */
@@ -74,7 +64,6 @@ p {
     color: #888;
     font-family: Verdana;
 }   
-
 /* Style the footer */
 footer {
     background-color: #333;
