--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family: Helvetica;
+    font-family: Helvetica sans-serif;
 }
 
 /* Style the navigation */
