--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,12 @@ button {
     cursor: pointer;
     font-size: 16px;
     display: inline-block;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: #666;
+    color: white;
 }
 
 /* Style the header */
