--- a/styles.css
+++ b/styles.css
@@ -17,22 +17,21 @@ nav {
     text-align: center;
 }
 
-button {
+nav button {
     background-color: #fff;
     color: #333;
     border: none;
-    padding: 12px 24px;
+    padding: 12px 16px;
     margin: 0 5px;
     cursor: pointer;
     font-size: 16px;
-    display: inline-block;
     transition-duration: 0.4s;
 }
 
-button:hover {
+nav button:hover {
     background-color: #666;
-    color: white;
-    border: 2px black;
+    color: #000;
+    border: 2px #fff;
 }
 
 /* Style the header */
