--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,12 @@ nav button {
     cursor: pointer;
     font-size: 16px;
     font-weight: bolder;
-    transition-duration: 0.4s;
+    transition-duration: 0.2s;
 }
 
 nav button:hover {
     background-color: #666;
-    color: #000;
+    color: white;
     border: 2px #fff;
 }
 
