--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ p {
 }
 
 .bottom-links {
-    text-align: center;
+    text-align: justify;
     margin-top: 10px;
     color: #888;
     font-family: Verdana;
