--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,14 @@ nav button {
 
 button:hover {
     background-color: #666;
-    color: #000;
+    color: white;
     border: 2px #fff;
 }
 
 #ukraine {
     font-size: 15px;
     font-weight: normal;
-    padding: 10px;
+    padding: 12px 10px 10px 10px;
 }
 
 #email {
