--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,11 @@ nav button {
     background-color: #fff;
     color: #333;
     border: none;
+    min-width: 60px;
     padding: 12px 16px;
     margin: 0 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bolder;
     transition-duration: 0.2s;
 }
