--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ nav button {
     background-color: #fff;
     color: #333;
     border: none;
+    border-radius: 2px;
     min-width: 60px;
     padding: 12px 16px;
     margin: 0 5px;
