--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,7 @@ p {
 
 .bottom-links a {
     color: #333;
-    font-weight: bolder;
-    background-color: #202020;
+    font-weight: normal;
     text-align: justify;
 
 }
