--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ button:hover {
 }
 
 #ukraine {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: normal;
     padding: 12px 10px 10px 10px;
 }
@@ -83,7 +83,7 @@ p {
 }
 
 .bottom-links {
-    text-align: justify;
+    text-align: center;
     margin-top: 10px;
     color: #888;
     font-family: Verdana;   
@@ -91,8 +91,8 @@ p {
 
 .bottom-links a {
     color: #333;
-    font-weight: normal;
-    text-align: justify;
+    font-weight: 300;
+    text-align: center;
 
 }
 
@@ -108,5 +108,5 @@ footer {
 }
  footer a {
     color: white;
-    text-align: justify;
+    text-align: center;
  }
