--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ nav button {
     color: #333;
     border: none;
     border-radius: 3px;
-    min-width: 60px;
+    min-width: 150px;
     padding: 12px 16px;
     margin: 0 5px;
     cursor: pointer;
@@ -38,11 +38,11 @@ button:hover {
 #ukraine {
     font-size: 18px;
     font-weight: normal;
-    padding: 12px 10px 10px 10px;
+    padding: 0 16px;
 }
 
 #email {
-    font-size: 28px;
+    font-size: 36px;
     font-weight: bolder;
     padding: 8px;
 }
