--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ nav {
     padding: 10px;
     text-align: center;
     position: fixed;
+    width: 100%;
 }
 
 nav button {
@@ -21,7 +22,7 @@ nav button {
     color: #333;
     border: none;
     border-radius: 3px;
-    min-width: 150px;
+    min-width: 120px;
     padding: 12px 16px;
     margin: 0 5px;
     cursor: pointer;
@@ -39,7 +40,7 @@ button:hover {
 #ukraine {
     font-size: 18px;
     font-weight: normal;
-    padding: 0 16px;
+    padding: 12 16px;
 }
 
 #email {
@@ -106,7 +107,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 50px;
 }
  footer a {
     color: white;
