--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: justify;
-    padding: 10px;
+    padding: 8px 16px 12px;
     position: fixed;
     bottom: 0;
     width: 100%;
