--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html, body {
 /* Style the navigation */
 nav {
     background-color: #333;
-    padding: 10px;
+    padding: 0;
     text-align: center;
     position: fixed;
     width: 100%;
@@ -40,7 +40,7 @@ button:hover {
 #ukraine {
     font-size: 18px;
     font-weight: normal;
-    padding: 12 16px;
+    padding: 12px 16px;
 }
 
 #email {
