--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ nav button {
     color: #333;
     border: none;
     border-radius: 3px;
+    border-height: 40px;
     min-width: 120px;
     padding: 12px 16px;
     margin: 0 5px;
@@ -40,7 +41,7 @@ button:hover {
 #ukraine {
     font-size: 18px;
     font-weight: normal;
-    padding: 12px 16px;
+    padding: 10px 16px 14px;
 }
 
 #email {
