--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ nav {
     background-color: #333;
     padding: 10px;
     text-align: center;
-    position: fixed;
+    position: fixed top;
     width: 100%;
 }
 
