--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html, body {
 /* Style the navigation */
 nav {
     background-color: #333;
-    padding: 10px;
+    padding: 0;
     text-align: center;
     position: fixed top;
     width: 100%;
@@ -23,7 +23,7 @@ nav button {
     border: none;
     border-radius: 3px;
     border-height: 40px;
-    width: 150px;
+    width: 250px;
     padding: 12px 16px;
     margin: 0 5px;
     cursor: pointer;
@@ -107,7 +107,7 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: justify;
-    padding: 8px 16px 12px;
+    padding: 5px 16px 15px;
     position: fixed;
     bottom: 0;
     width: 100%;
