--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ nav {
     background-color: #333;
     padding: 0;
     text-align: center;
-    position: fixed top;
+    position: fixed;
     width: 100%;
 }
 
@@ -107,7 +107,6 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: justify;
-    padding: 5px 16px 15px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -116,4 +115,5 @@ footer {
  footer a {
     color: white;
     text-align: center;
+    padding: 8px 16px 12px;
  }
