--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ nav button {
     border: none;
     border-radius: 3px;
     border-height: 40px;
-    width: 220px;
+    width: 180px;
     padding: 12px 16px;
     margin: 0 5px;
     cursor: pointer;
@@ -42,12 +42,13 @@ button:hover {
     font-size: 18px;
     font-weight: normal;
     padding: 9px 16px 18px;
-    width: 280px;
+    width: 180px;
 }
 
 #email {
     padding: 8px 16px;
     width: 50px;
+    font-size: 28px;
 }
 
 #email-text {
@@ -101,7 +102,6 @@ p {
     color: #333;
     font-weight: 300;
     text-align: center;
-
 }
 
 /* Style the footer */
@@ -118,5 +118,5 @@ footer {
  footer a {
     color: white;
     text-align: center;
-    padding: 8px 16px 12px;
+    padding: 5px 16px 16px;
  }
