--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ nav button {
     border-radius: 3px;
     border-height: 40px;
     width: 180px;
-    padding: 12px 16px;
-    margin: 0 5px;
+    padding: 8px 10px;
+    margin: 5 5px;
     cursor: pointer;
     font-size: 20px;
     font-weight: bolder;
@@ -41,8 +41,9 @@ button:hover {
 #ukraine {
     font-size: 18px;
     font-weight: normal;
-    padding: 9px 16px 18px;
+    padding: 8px 10px;
     width: 180px;
+    margin: 0;
 }
 
 #email {
