--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ nav {
     position: static;
     top: 0;
     width: 100%;
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 nav button {
@@ -40,25 +44,25 @@ button:hover {
     color: white;
     border: 2px #000;
 }
-
 #ukraine {
     font-size: 18px;
     font-weight: normal;
     height: 40px;
     padding: 4px 5px 1px;
 }
+#email-text {
+    display: flex;
+    align-items: center;
+    text-decoration: none; /* This removes the underline */
+}
 
 #email {
     width: 50px;
     height: 40px;
-    font-size: 28px;
-    padding: 0 5px 20px;
-    margin: 0 5px 1px;
-    border: 0 5px 1px;
-}
-
-#email-text {
-    padding: 0;
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center; /* This centers the icon vertically */
 }
 
 /* Style the header */
