--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@
     position: relative;
 }
 
+body {
+    margin: 70px 0 50px;
+}
+
 /* UPPER NAV BAR Settings */
 nav {
     background-color: #333;
@@ -102,8 +106,12 @@ h5 {
 
 /* Style the paragraph */
 p {
-    text-align: center;
     margin-top: 20px;
+    text-align: justify;
+    display: flex;
+    max-width: 800px;
+    min-width: 300px;
+    margin: 10px auto; /* Centering the paragraph horizontally */
 }
 
 .infoblock {
@@ -111,22 +119,30 @@ p {
     font-weight: lighter;
     color: #666;
     min-width: 300px;
-    margin-top: 240px;
+    max-width: 800px;
+    margin: auto; /* Center horizontally*/
+    text-align: justify;
 }
 
-.bottom-links {
-    text-align: center;
-    margin-top: 40px;
-    color: #888;
-    font-size: larger; 
-}   
-
 .bottom-links a {
-    color: #333;
-    font-weight: 300;
+    margin: 20px auto;
+    color: #000;
+    font-weight: 500;
+    font-size: larger;
+    text-decoration: none;
     text-align: center;
+    border: #000 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 10px;
+    background-color: #eee;
+}
 
+.bottom-links
+  .detailer {
+    font-weight: bold;
+    color: #666;
+    text-decoration: none;
+    background-color: #fff;
 }
 
 /* Style the footer */
