--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ nav {
     padding: 10px;
     position: sticky;
     top: 0;
-    min-width: 300px;
+    min-width: 20%;
     display: flex;
     align-items: stretch;
     justify-content: center;
@@ -108,7 +108,7 @@ h5 {
 p {
     text-align: justify;
     max-width: 800px;
-    min-width: 300px;
+    min-width: 20%;
     margin: 10px auto; /* Centering the paragraph horizontally */
     padding: 15px 20px;
 }
@@ -127,7 +127,7 @@ p {
     font-size: 16px;
     font-weight: lighter;
     color: #666;
-    min-width: 300px;
+    min-width: 20%;
     max-width: 1000px;
     text-align: center;
     margin: auto; /* Center horizontally*/
@@ -164,7 +164,7 @@ footer {
     position: fixed;
     bottom: 0;
     height: 35px;
-    padding: 5px 16px 10px;
+    padding: 5px 16px 20px;
     width: 100%;
 }
 
@@ -173,7 +173,7 @@ footer p {
     background-color: #333;
     color: #fff;
     text-align: center;
-    min-width: 300px;
+    min-width: 20%;
     max-width: 100%;
 }
 
