--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,7 @@ footer {
     height: 35px;
     padding: 5px 16px 40px;
     max-width: 100%;
+    min-width: 20%;
 }
 
 /* Footer specific settings */
