--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ p {
     min-width: 20%;
     margin: 10px auto; /* Centering the paragraph horizontally */
     padding: 15px 20px;
+    font-size: auto;
 }
 
 .main-userpic {
