--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,8 @@ footer p {
     background-color: #333;
     color: #fff;
     text-align: center;
+    min-width: 300px;
+    max-width: 100%;
 }
 
 footer a {
@@ -189,3 +191,4 @@ footer a {
     text-align: center;
     margin: 0; /* Reset margin to remove default spacing */
 }
+
