--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ p {
 .contact a {
     position: sticky;
     margin: 20px auto auto 10px;
+    padding: 15px;
     color: #000;
     font-weight: 500;
     font-size: larger;
