--- a/styles.css
+++ b/styles.css
@@ -168,9 +168,8 @@ footer {
     position: fixed;
     bottom: 0;
     height: 35px;
-    padding: 5px 16px 40px;
-    max-width: 100%;
-    min-width: 20%;
+    padding: 5px 16px 20px;
+    width: 100%;
 }
 
 /* Footer specific settings */
@@ -178,7 +177,7 @@ footer p {
     background-color: #333;
     color: #fff;
     text-align: center;
-    min-width: 300px;
+    min-width: 20%;
     max-width: 100%;
 }
 
@@ -191,4 +190,3 @@ footer a {
     text-align: center;
     margin: 0; /* Reset margin to remove default spacing */
 }
-
