--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ p {
     min-width: 35%;
     margin: 10px auto; /* Centering the paragraph horizontally */
     padding: 15px 20px;
+    font-size: 110%;
 }
 
 .main-userpic {
@@ -176,8 +177,7 @@ footer p {
     background-color: #333;
     color: #fff;
     text-align: center;
-    min-width: 50%;
-    max-width: 80%;
+    max-width: 100%;
 }
 
 footer a {
