--- a/styles.css
+++ b/styles.css
@@ -142,21 +142,18 @@ footer {
     position: fixed;
     bottom: 0;
     height: 35px;
-    padding: 5px 20px 30px;
+    padding: 5px 20px auto;
     width: 100%;
 }
 
 /* Footer specific settings */
 footer p {
-    background-color: #333;
-    color: #fff;
     text-align: center;
     max-width: 100%;
 }
 
 footer a {
-    color: white;
-    margin-left: 15px;
+    color: #fff;
     text-align: center;
 }
 
