--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ footer {
     height: 35px;
     padding: 5px 20px auto;
     width: 100%;
+    margin-bottom: 10px;
 }
 
 /* Footer specific settings */
