--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,8 @@ footer {
 footer p {
     text-align: center;
     max-width: 100%;
+    margin-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 footer a {
