--- a/styles.css
+++ b/styles.css
@@ -140,8 +140,8 @@ footer {
     background-color: #333;
     color: #fff;
     position: fixed;
-    bottom: 0;
-    height: 35px;
+    bottom: 2px;
+    height: 30px;
     padding: 5px 20px auto;
     width: 100%;
     margin-bottom: 10px;
