--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ footer {
     position: fixed;
     bottom: 2px;
     height: 30px;
-    padding: 5px 20px auto;
+    padding: 0 20px auto;
     width: 100%;
     margin-bottom: 10px;
 }
@@ -151,7 +151,7 @@ footer {
 footer p {
     text-align: center;
     max-width: 100%;
-    margin-bottom: 10px;
+    margin: 0 0 10px;
     padding-bottom: 20px;
 }
 
