--- a/styles.css
+++ b/styles.css
@@ -141,8 +141,8 @@ footer {
     color: #fff;
     position: sticky;
     bottom: 2px;
-    height: 30px;
-    padding: 0 20px auto;
+    height: 40px;
+    padding: 5px 0 10px;
     width: 100%;
     margin-bottom: 10px;
     z-index: 999;
@@ -152,6 +152,7 @@ footer {
 footer p {
     text-align: center;
     max-width: 100%;
+    min-width: 300px;
     margin: 0 0 10px;
     padding-bottom: 20px;
 }
@@ -159,12 +160,18 @@ footer p {
 footer a {
     color: #fff;
     text-align: center;
+    margin-left: 10px;
+    margin-left: 10px;
 }
 
 .license {
     text-weight: lighter;
+    text-align: center;
+    margin: 0 auto; /* Reset margin to remove default spacing */
 }
 
 .contact {
     text-weight: bolder;
+    text-align: center;
+    margin: 0 auto; /* Reset margin to remove default spacing */
 }
