--- a/styles.css
+++ b/styles.css
@@ -141,10 +141,10 @@ footer {
     color: #fff;
     position: fixed;
     bottom: 2px;
-    height: 40px;
+    min-height: 40px;
     padding: 5px 0 10px;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     z-index: 999;
 }
 
