--- a/styles.css
+++ b/styles.css
@@ -140,9 +140,9 @@ footer {
     background-color: #333;
     color: #fff;
     position: fixed;
-    bottom: 2px;
+    bottom: 0;
     min-height: 40px;
-    padding: 5px 0 10px;
+    padding: 5px 0 30px;
     width: 100%;
     margin-bottom: 0;
     z-index: 999;
@@ -153,7 +153,7 @@ footer p {
     text-align: center;
     max-width: 100%;
     min-width: 300px;
-    margin: 0 0 10px;
+    margin: 0;
     padding-bottom: 20px;
     font-size: 130%;
 }
