--- a/styles.css
+++ b/styles.css
@@ -144,8 +144,6 @@ footer {
     min-height: 40px;
     padding: 5px 0 30px;
     width: 100%;
-    margin-bottom: 0;
-    z-index: 999;
 }
 
 /* Footer specific settings */
@@ -154,7 +152,7 @@ footer p {
     max-width: 100%;
     min-width: 300px;
     margin: 0;
-    padding-bottom: 20px;
+    padding: 0 20px 20px;
     font-size: 130%;
 }
 
