--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ footer p {
     max-width: 100%;
     min-width: 300px;
     margin: 0;
-    padding: 0 20px 20px;
+    padding: 2px 20px 20px;
     font-size: 130%;
 }
 
