--- a/styles.css
+++ b/styles.css
@@ -157,21 +157,28 @@ footer p {
 }
 
 footer a {
+    color: #fff;
     margin-left: 10px;
     margin-right: 5px;
     padding-top: 15px;
     padding-bottom: 20px;
 }
 
-.license a {
+.license {
     font-weight: lighter;
+}
+
+.license a {
     margin: 0 auto; /* Reset margin to remove default spacing */
     padding-top: 15px;
     padding-bottom: 20px;
 }
 
-.contact a {
+.contact {
     font-weight: bold;
+}
+
+.contact a {
     margin: 0 auto; /* Reset margin to remove default spacing */
     border-top: 15px;
     padding-bottom: 20px;
