--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ footer p {
     min-width: 300px;
     margin: 0;
     padding: 5px 20px 20px;
-    font-size: 130%;
+    font-size: 32px;
 }
 
 footer a {
@@ -165,6 +165,7 @@ footer a {
 }
 
 .license {
+    color: #fff;
     font-weight: lighter;
 }
 
@@ -175,6 +176,7 @@ footer a {
 }
 
 .contact {
+    color: #fff;
     font-weight: bold;
 }
 
