--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ footer p {
     min-width: 300px;
     margin: 0;
     padding: 5px 20px 20px;
-    font-size: 32px;
+    font-size: 22px;
 }
 
 footer a {
@@ -177,7 +177,7 @@ footer a {
 
 .contact {
     color: #fff;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .contact a {
