--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ p {
     min-width: 35%;
     margin: 10px auto; /* Centering the paragraph horizontally */
     padding: 15px 20px;
-    font-size: 14px;
+    font-size: larger;
 }
 
 .main-userpic {
@@ -153,7 +153,7 @@ footer p {
     min-width: 300px;
     margin: 0;
     padding: 5px 20px 20px;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 footer a {
