--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,8 @@ footer p {
     min-width: 300px;
     margin: 0;
     padding: 5px 20px 20px;
-    font-size: 16px;
+    font-size: 20px;
+    line-height: 1.6;
 }
 
 footer a {
