--- a/styles.css
+++ b/styles.css
@@ -148,8 +148,8 @@ footer {
 
 /* Footer specific settings */
 footer p {
-    text-align: center;
-    max-width: 100%;
+    text-align: justify;
+    max-width: 50%;
     min-width: 300px;
     margin: 0;
     padding: 5px 20px 10px;
