--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /* * * --------------  GENERAL RULES  -------------- * * */
 * {
-    font-family: Tahoma, Geneva. Helvetica, sans-serif;
+    font-family: Tahoma, Geneva, Helvetica, sans-serif;
     text-align: center;
 }
 
