--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5 {
 h2 {
     font-size: 50px;
     color: #000;
-    margin: 20px auto;
+    margin: 20px auto 10px;
 }
 
 h3 {
@@ -119,6 +119,7 @@ p {
     border-radius: 100%;
     position: center;
     object-align: center;
+    padding: 5px auto;
 }
 
 
