--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ h2 {
     font-size: 50px;
     color: #000;
     margin: 20px auto 10px;
+    line-height: 1.2;
 }
 
 h3 {
@@ -119,7 +120,7 @@ p {
     border-radius: 100%;
     position: center;
     object-align: center;
-    padding: 5px auto;
+    padding: 10px auto;
 }
 
 
